Added ClamAV to PodiumD

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1,8 +1,14 @@
-configuration:
-  enabled: true
+tags:
+  formulier: true
+  contact: false
+  portaal: false
+  zaak: false
+
+global:
+  configuration:
+    enabled: true
 
 keycloak:
-  enabled: true
   nameOverride: keycloak
   fullnameOverride: keycloak
   postgresql:
@@ -12,7 +18,6 @@ keycloak:
     existingConfigmap: keycloak-config
 
 openzaak:
-  enabled: true
   nameOverride: open-zaak
   fullnameOverride: open-zaak
   image:
@@ -33,7 +38,6 @@ openzaak:
     fullnameOverride: open-zaak-redis
 
 opennotificaties:
-  enabled: true
   nameOverride: open-notificaties
   fullnameOverride: open-notificaties
   configuration:
@@ -61,7 +65,6 @@ opennotificaties:
     fullnameOverride: open-notificaties-redis
 
 objecten:
-  enabled: true
   nameOverride: objecten
   fullnameOverride: objecten
   image:
@@ -79,7 +82,6 @@ objecten:
     fullnameOverride: objecten-redis
 
 objecttypen:
-  enabled: true
   nameOverride: objecttypen
   fullnameOverride: objecttypen
   image:
@@ -94,7 +96,6 @@ objecttypen:
       patchAdmin: false
 
 openforms:
-  enabled: true
   nameOverride: open-forms
   fullnameOverride: open-forms
   image:
@@ -114,7 +115,6 @@ openforms:
     fullnameOverride: open-forms-redis
 
 openklant:
-  enabled: true
   nameOverride: open-klant
   fullnameOverride: open-klant
   image:
@@ -132,7 +132,6 @@ openklant:
     fullnameOverride: open-klant-redis
 
 openinwoner:
-  enabled: true
   nameOverride: open-inwoner
   fullnameOverride: open-inwoner
   image:
@@ -152,14 +151,93 @@ openinwoner:
     nameOverride: open-inwoner-elasticsearch
     fullnameOverride: open-inwoner-elasticsearch
 
+clamav:
+  image:
+    tag: stable_base
+  Resources:
+    limits:
+      cpu: 100m
+      memory: 2Gi
+    requests:
+      cpu: 100m
+      memory: 2Gi
+  # Ref: https://linux.die.net/man/5/clamd.conf
+  clamdConfig: |
+    ###############
+    # General
+    ###############
+    DatabaseDirectory /data
+    TemporaryDirectory /tmp
+    LogTime yes
+    # CUSTOM: Use pid file in tmp
+    PidFile /tmp/clamd.pid
+    LocalSocket /tmp/clamd.sock
+    TCPSocket 3310
+    Foreground yes
+    ###############
+    # Results
+    ###############
+    DetectPUA yes
+    ExcludePUA NetTool
+    ExcludePUA PWTool
+    HeuristicAlerts yes
+    Bytecode yes
+    ###############
+    # Scan
+    ###############
+    ScanPE yes
+    DisableCertCheck yes
+    ScanELF yes
+    AlertBrokenExecutables yes
+    ScanOLE2 yes
+    ScanPDF yes
+    ScanSWF yes
+    ScanMail yes
+    PhishingSignatures yes
+    PhishingScanURLs yes
+    ScanHTML yes
+    ScanArchive yes
+    ###############
+    # Scan
+    ###############
+    MaxScanSize 150M
+    MaxFileSize 30M
+    MaxRecursion 10
+    MaxFiles 15000
+    MaxEmbeddedPE 10M
+    MaxHTMLNormalize 10M
+    MaxHTMLNoTags 2M
+    MaxScriptNormalize 5M
+    MaxZipTypeRcg 1M
+    MaxPartitions 128
+    MaxIconsPE 200
+    PCREMatchLimit 10000
+    PCRERecMatchLimit 10000
+    ConcurrentDatabaseReload no
+  ## Ref: https://linux.die.net/man/5/freshclam.conf
+  freshclamConfig: |
+    ###############
+    # General
+    ###############
+    DatabaseDirectory /data
+    UpdateLogFile /dev/stdout
+    LogTime yes
+    # CUSTOM: Use pid file in tmp
+    PidFile /tmp/freshclam.pid
+    # CUSTOM: Set defined user
+    DatabaseOwner 2000
+    ###############
+    # Updates
+    ###############
+    DatabaseMirror database.clamav.net
+    ScriptedUpdates yes
+    NotifyClamd /etc/clamav/clamd.conf
+    Bytecode yes
+    TestDatabases no
+
 serviceAccount:
   create: true
   automount: true
   annotations: {}
   name: ""
 
-kiss:
-  enabled: false
-
-zac:
-  enabled: false
