--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -7,34 +7,65 @@ appVersion: "1.3.0"
 dependencies:
   - name: keycloak
     version: 21.2.2
-    repository: https://charts.bitnami.com/bitnami
+    repository: "@bitnami"
     condition: keycloak.enabled
+    tags:
+      - formulier
+      - contact
+      - portaal
+      - zaak
   - name: openzaak
     version: 1.3.1
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: openzaak.enabled
+    tags:
+      - zaak
   - name: opennotificaties
     version: 1.3.1
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: opennotificaties.enabled
+    tags:
+      - formulier
+      - zaak
   - name: objecten
     version: 2.3.1
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: objecten.enabled
+    tags:
+      - formulier
+      - contact
+      - zaak
   - name: objecttypen
     version: 1.0.5
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: objecttypen.enabled
+    tags:
+      - formulier
+      - contact
+      - zaak
   - name: openforms
     version: 1.3.0
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: openforms.enabled
+    tags:
+      - formulier
+      - contact
+      - portaal
+      - zaak
   - name: openklant
     version: 1.3.2
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: openklant.enabled
   - name: openinwoner
     version: 1.3.2
-    repository: https://maykinmedia.github.io/charts
+    repository: "@maykinmedia"
     condition: openinwoner.enabled
-
+    tags:
+      - portaal
+      - zaak
+  - name: clamav
+    version: 3.1.0
+    repository: "@wiremind"
+    condition: clamav.enabled
+    tags:
+      - formulier
