--- a/charts/podiumd/templates/http-request-files-configmap.yaml
+++ b/charts/podiumd/templates/http-request-files-configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.configuration.enabled -}}
+{{- if .Values.global.configuration.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
