--- a/charts/podiumd/templates/http-request-job.yaml
+++ b/charts/podiumd/templates/http-request-job.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.configuration.enabled -}}
+{{- if .Values.global.configuration.enabled -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
