--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -9,42 +9,32 @@ dependencies:
     version: ~21.2.2
     repository: "@bitnami"
     condition: keycloak.enabled
+  - name: clamav
+    version: ~3.1.0
+    repository: "@wiremind"
+    condition: clamav.enabled
     tags:
       - formulierEsuite
-      - contactEsuite
-      - portaalEsuite
-      - zaak
   - name: openzaak
     version: ~1.3.2
     repository: "@maykinmedia"
     condition: openzaak.enabled
-    tags:
-      - zaak
   - name: opennotificaties
     version: ~1.3.2
     repository: "@maykinmedia"
     condition: opennotificaties.enabled
-    tags:
-      - formulierEsuite
-      - contactEsuite
-      - portaalEsuite
-      - zaak
   - name: objecten
     version: ~2.3.1
     repository: "@maykinmedia"
     condition: objecten.enabled
-    tags:
-      - formulierEsuite
-      - contactEsuite
-      - zaak
   - name: objecttypen
     version: ~1.0.5
     repository: "@maykinmedia"
-    condition: objecten.enabled
-    tags:
-      - formulierEsuite
-      - contactEsuite
-      - zaak
+    condition: objecttypen.enabled
+  - name: openklant
+    version: ~1.3.2
+    repository: "@maykinmedia"
+    condition: openklant.enabled
   - name: openforms
     version: ~1.3.0
     repository: "@maykinmedia"
@@ -53,19 +43,10 @@ dependencies:
       - formulierEsuite
       - portaalEsuite
       - zaak
-  - name: openklant
-    version: ~1.3.2
-    repository: "@maykinmedia"
-    condition: openklant.enabled
   - name: openinwoner
     version: ~1.3.2
     repository: "@maykinmedia"
     condition: openinwoner.enabled
     tags:
       - portaalEsuite
-  - name: clamav
-    version: ~3.1.0
-    repository: "@wiremind"
-    condition: clamav.enabled
-    tags:
-      - formulierEsuite
+      - zaak
