--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,6 +26,7 @@ jobs:
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add maykinmedia https://maykinmedia.github.io/charts
           helm repo add opentelemetry https://open-telemetry.github.io/opentelemetry-helm-charts
+          helm repo add wiremind https://wiremind.github.io/wiremind-helm-charts
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
