--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -2,8 +2,7 @@ apiVersion: v2
 name: podiumd
 description: A Helm chart for PodiumD
 type: application
-version: 1.0.0-alpha.1
-appVersion: "1.3.0"
+version: 1.0.0-alpha.2
 dependencies:
   - name: keycloak
     version: ~21.2.2
@@ -14,7 +13,7 @@ dependencies:
     repository: "@wiremind"
     condition: clamav.enabled
     tags:
-      - formulierEsuite
+      - formulier
   - name: openzaak
     version: ~1.3.2
     repository: "@maykinmedia"
@@ -36,17 +35,18 @@ dependencies:
     repository: "@maykinmedia"
     condition: openklant.enabled
   - name: openforms
+    alias: openformulieren
     version: ~1.3.0
     repository: "@maykinmedia"
-    condition: openforms.enabled
+    condition: openformulieren.enabled
     tags:
-      - formulierEsuite
-      - portaalEsuite
+      - formulier
+      - portaal
       - zaak
   - name: openinwoner
     version: ~1.3.2
     repository: "@maykinmedia"
     condition: openinwoner.enabled
     tags:
-      - portaalEsuite
+      - portaal
       - zaak
